# gunter

common/: defcmd.hpp  defs.hpp  logging.hpp  mess.hpp  utils.hpp
gpanel/: CMakeLists.txt  app.cpp  gpanel
gpanel/assets/theme/: daktilo.qss  default.qss  light-terminal.qss
gpanel/assets/ui/: filemanager.ui  main.ui  system.ui  tab.old.ui  tab.ui  tab_panel.ui  terminal.ui  tracer.ui
gpanel/include/core/: client_api.hpp  server_api.hpp
gpanel/include/ui/: filemanager.hpp  main.hpp  main_window.hpp  system.hpp  tab.hpp  tab_panel.hpp  tracer.hpp
gpanel/include/uix/: client_panel.hpp  dialogs.hpp  filemanager.hpp  main.hpp  system.hpp  tab.hpp  tracer.hpp  twindow.hpp
gpanel/include/utils/: message.hpp  theme.hpp  ui.hpp
gpanel/src/core/: client_api.cpp  main.cpp  server_api.cpp
gpanel/src/uix/: client_panel.cpp  dialogs.cpp  filemanager.cpp  main.cpp  system.cpp  tab.cpp  tracer.cpp  twindow.cpp
gpanel/src/utils/: message.cpp  theme.cpp  ui.cpp
gserver/: .todo  CMakeLists.txt  Dockerfile  main.cpp
gserver/include/: clientspool.hpp  server.hpp
gserver/src/: clientspool.cpp  endpoints.cpp  server.cpp  utils.cpp
gunter/: FNC  dllmain.cpp  loadlib.cpp  main.cpp  wine_build
gunter/include/controller/: client.hpp  runner.hpp
gunter/include/modules/: fs.hpp  ishell.hpp  keylogger.hpp  persistence.hpp  syscontrol.hpp  sysinfo.hpp
gunter/include/utils/: com.hpp
gunter/src/controller/: client.cpp  runner.cpp
gunter/src/modules/: fs.cpp  syscontrol.cpp
gunter/src/utils/: com.cpp
